--- a/css/socio.css
+++ b/css/socio.css
@@ -72,7 +72,7 @@ a {
 /* ----- MAIN ----- */
 
 .carnet-socio {
-    width: 80%;
+    width: 1100px;
     margin: 40px auto;
 }
 
@@ -165,7 +165,7 @@ a {
 }
 
 .carnet-dorso {
-    width: 80%;
+    width: 1100px;
     margin: 40px auto;
     display: flex;
     flex-direction: column;
