--- a/css/elclub.css
+++ b/css/elclub.css
@@ -102,7 +102,7 @@ a {
 
 #elclub-section-3 {
     min-height: 300px;
-    background-color: white;
+    background-color: #f0f0f0;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -136,7 +136,8 @@ input {
 }
 .form {
     width: 40%;
-    padding: 20px 0;
+    padding: 30px 0;
+    background-color: #ececec;
 }
 
 form {
@@ -155,12 +156,27 @@ textarea {
     resize: none;
 }
 
+form div {
+    display: flex;
+    gap: 5px;
+}
+
+form span {
+    margin-bottom: -20px;
+}
+
+.btns {
+    display: flex;
+    justify-content: space-between;
+}
+
 form button {
     padding: 20px;
-    border: 2px solid black;
-    background-color: #eeeeee;
+    border: 2px solid gray;
+    background: none;
     color: black;
     cursor: pointer;
+    width: 100%;
 }
 
 iframe {
